--- a/templates/partials/scripts.html
+++ b/templates/partials/scripts.html
@@ -19,3 +19,6 @@
 
 <!-- Modal de eliminacion para cualquier template -->
 <script src="{% static 'js/delete.js' %}"></script>
+
+<!-- Sistema de notificaciones -->
+<script src="{% static 'js/notifications.js' %}"></script>
