--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -66,9 +66,10 @@
 
     <!-- Scripts -->
     {% include "partials/scripts.html" %}
-
     
     {% block extra_scripts %}{% endblock %}
+    
+    <!-- Los scripts del chatbot se han movido a partials/scripts.html -->
 
 </body>
 </html>
